--- a/draft/Makefile
+++ b/draft/Makefile
@@ -63,10 +63,8 @@ $(next).xml: $(draft).xml ../src/yang/iana-bfd-types.yang ../src/yang/ietf-bfd-i
 	sed -e"s/YYYY-MM-DD/$(shell date +%Y-%m-%d)/" ../src/yang/example-bfd-echo.yang > ../src/yang/example-bfd-echo\@$(shell date +%Y-%m-%d).yang
 	sed -e"s/YYYY-MM-DD/$(shell date +%Y-%m-%d)/" ../src/yang/example-bfd-client.yang > ../src/yang/example-bfd-client\@$(shell date +%Y-%m-%d).yang
 
-	cd ../src; ./gen-trees.sh; cd ..;
+	cd ../src; ./validate-and-gen-trees.sh; cd ..;
 	../src/insert-figures.sh $@ > tmp; mv tmp $@
-
-	yanglint -p ../../ ../src/yang/ietf-bfd-ip-sh\@$(shell date +%Y-%m-%d).yang example-ip-sh.xml
 
 .INTERMEDIATE: $(draft).xml
 %.xml: %.md
